telepresence-demo/hello-k8s/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-dev
  template:
    metadata:
      labels:
        app: hello-dev
        demo: second-demo
    spec:
      containers:
      - image: tdemo:green
        imagePullPolicy: IfNotPresent
        name: hello-dev
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.2"
            memory: "64Mi"
          requests:
            cpu: "0.1"
            memory: "32Mi"
