telepresence-demo/hello-k8s/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: hello-dev
