telepresence-demo/hello-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: helloserver
